--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
   <link rel="icon" type="image/png" href="BB_Logo_favicon.png" sizes="32x32">
   <link rel="apple-touch-icon" href="BB_Logo_favicon.png">
 
-  <!-- Bootstrap 5 CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    
-  />
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
     body {
@@ -27,7 +23,6 @@
 
     .bb-logo {
       width: 120px;
-      height: auto;
       filter: drop-shadow(0 4px 10px rgba(15, 23, 42, 0.3));
     }
 
@@ -37,44 +32,28 @@
       color: #1d4ed8;
     }
 
-    .page-subtitle {
-      color: #6b7280;
-      font-size: 0.95rem;
-    }
-
     .card-helpline {
       border-radius: 18px;
       border: 1px solid #e5e7eb;
       box-shadow: 0 18px 45px rgba(15, 23, 42, 0.08);
     }
 
-    .form-label {
-      font-size: 0.9rem;
-      font-weight: 500;
-      color: #111827;
-    }
-
-    .form-control,
-    .form-select {
-      border-radius: 0.75rem;
-      border-color: #e5e7eb;
-      background-color: #f9fafb;
-      font-size: 0.9rem;
-      padding: 0.65rem 0.9rem;
-    }
-
-    .form-control:focus,
-    .form-select:focus,
-    textarea:focus {
-      border-color: #1d9bf0;
-      box-shadow: 0 0 0 0.15rem rgba(29, 155, 240, 0.35);
-      background-color: #ffffff;
+    .chip {
+      display: inline-flex;
+      align-items: center;
+      padding: 0.25rem 0.6rem;
+      background-color: #e0f2fe;
+      color: #1d4ed8;
+      border-radius: 999px;
+      font-size: 0.8rem;
+      margin-right: 6px;
+      margin-bottom: 6px;
     }
 
     .btn-gradient {
       background: linear-gradient(to right, #1d9bf0, #34d399);
       border: none;
-      color: #ffffff;
+      color: white;
       font-weight: 600;
       border-radius: 999px;
       padding: 0.7rem 1.5rem;
@@ -82,103 +61,73 @@
     }
 
     .btn-gradient:hover {
-      box-shadow: 0 14px 36px rgba(37, 99, 235, 0.35);
       transform: translateY(-1px);
+      box-shadow: 0 14px 36px rgba(37, 99, 235, 0.35);
     }
 
-    .btn-outline-secondary {
-      border-radius: 999px;
-      font-weight: 500;
-    }
-
-    .chip {
-      display: inline-flex;
+    /* Thank You page */
+    #thankYouSection .success-icon {
+      width: 70px;
+      height: 70px;
+      background: #22c55e;
+      border-radius: 50%;
+      display: flex;
       align-items: center;
-      padding: 0.25rem 0.6rem;
-      margin: 0.15rem;
-      border-radius: 999px;
-      background-color: #e0f2fe;
-      font-size: 0.8rem;
-      color: #1d4ed8;
-    }
-
-    .chip button {
-      border: none;
-      background: transparent;
-      margin-left: 0.3rem;
-      font-size: 0.9rem;
-      line-height: 1;
-      cursor: pointer;
-      color: #1e3a8a;
+      justify-content: center;
+      margin: 0 auto 12px;
+      box-shadow: 0 10px 25px rgba(34, 197, 94, 0.4);
     }
 
     .ref-code {
-      font-family: "SF Mono", Menlo, Consolas, monospace;
-      font-weight: 600;
+      font-family: monospace;
+      font-weight: bold;
       color: #111827;
-    }
-
-    @media (max-width: 576px) {
-      .btn-group-flex {
-        flex-direction: column;
-      }
-      .btn-group-flex > * {
-        width: 100%;
-      }
     }
   </style>
 </head>
+
 <body>
-  <div class="container py-4 py-md-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-9">
-        <!-- Header -->
-        <div class="text-center mb-4">
-          <img src="BB_Logo_Cropped.png" alt="Burma Burma Logo" class="bb-logo mb-2" />
-          <div class="page-title">My HR Support</div>
-          <div class="page-subtitle">
-            Your confidential gateway for HR assistance, requests, and guidance.
-          </div>
-        </div>
+<div class="container py-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-9">
 
-        <!-- Card -->
-        <div class="card card-helpline">
-          <div class="card-body p-4 p-md-5">
-            <!-- Alerts -->
-            <div id="alert-container" class="mb-3" style="display:none;">
-              <div id="alert" class="alert alert-danger mb-0" role="alert"></div>
-            </div>
+      <!-- Header -->
+      <div class="text-center mb-4">
+        <img src="BB_Logo_Cropped.png" class="bb-logo mb-2">
+        <div class="page-title">My HR Support</div>
+        <div class="text-muted">Your confidential gateway for HR assistance, requests, and guidance.</div>
+      </div>
 
-            <!-- MAIN FORM (single page) -->
+      <!-- CARD -->
+      <div class="card card-helpline">
+        <div class="card-body p-4 p-md-5">
+
+          <!-- ALERT -->
+          <div id="alertContainer" class="alert alert-danger d-none"></div>
+
+          <!-- ================= MAIN FORM ================= -->
+          <div id="formSection">
+
             <div class="row g-3 mb-3">
               <div class="col-md-6">
-                <label for="empId" class="form-label">Employee ID</label>
-                <input
-                  type="text"
-                  id="empId"
-                  class="form-control"
-                  placeholder="Enter your employee ID"
-                />
-              </div>
-              <div class="col-md-6">
-                <label for="employeeName" class="form-label">Employee Name</label>
-                <input
-                  type="text"
-                  id="employeeName"
-                  class="form-control"
-                  placeholder="Enter your full name"
-                />
+                <label class="form-label">Employee ID</label>
+                <input type="text" id="empId" class="form-control" placeholder="Enter your employee ID">
               </div>
 
               <div class="col-md-6">
-                <label for="jobLocation" class="form-label">Job Location</label>
+                <label class="form-label">Employee Name</label>
+                <input type="text" id="employeeName" class="form-control" placeholder="Enter your full name">
+              </div>
+
+              <div class="col-md-6">
+                <label class="form-label">Job Location</label>
                 <select id="jobLocation" class="form-select">
                   <option value="">Loading locations...</option>
                 </select>
               </div>
 
               <div class="col-md-6">
-                <label for="queryType" class="form-label">Query Type</label>
+                <label class="form-label">Query Type</label>
                 <select id="queryType" class="form-select">
                   <option value="">Select Query Type</option>
                   <option value="Salary">Salary</option>
@@ -187,7 +136,7 @@
               </div>
 
               <div class="col-md-6">
-                <label for="subQueryType" class="form-label">Sub Query Type</label>
+                <label class="form-label">Sub Query Type</label>
                 <select id="subQueryType" class="form-select" disabled>
                   <option value="">Select Query Type first</option>
                   <option value="Leave related">Leave related</option>
@@ -198,106 +147,80 @@
               </div>
             </div>
 
-            <!-- Dates section (mandatory) -->
+            <!-- DATE SECTION -->
             <div class="mb-3">
-              <label class="form-label">Relevant Date(s) <span class="text-danger">*</span></label>
-              <div class="d-flex flex-wrap align-items-center">
-                <input
-                  type="date"
-                  id="datePicker"
-                  class="form-control"
-                  style="max-width: 220px;"
-                />
-                <button
-                  type="button"
-                  class="btn btn-outline-primary btn-sm ms-2 mt-2 mt-sm-0"
-                  id="btnAddDate"
-                >
-                  Add Date
-                </button>
+              <label class="form-label">Relevant Date(s) *</label>
+              <div class="d-flex align-items-center flex-wrap">
+                <input type="date" id="dateInput" class="form-control" style="max-width:220px">
+                <button id="btnAddDate" class="btn btn-outline-primary btn-sm ms-2 mt-2 mt-sm-0">Add Date</button>
               </div>
-              <small class="text-muted" id="dateRangeHint">
-                Select one or more dates related to your query.
-              </small>
-              <div id="selectedDatesContainer" class="mt-2"></div>
-              <input type="hidden" id="selectedDates" />
+              <small class="text-muted">Select one or more dates related to your query.</small>
+
+              <div id="selectedDates" class="mt-2"></div>
             </div>
 
-            <!-- Actions -->
-            <div class="d-flex justify-content-between mt-4 btn-group-flex">
-              <button type="button" class="btn btn-outline-secondary" id="btnCallback">
+            <!-- BUTTON ROW -->
+            <div class="d-flex justify-content-between mt-4 flex-wrap gap-2">
+              <button id="btnRequestCallback" class="btn btn-outline-secondary">
                 Request a Callback
               </button>
-              <button type="button" class="btn btn-gradient" id="btnSubmitQuery">
+
+              <button id="btnSubmitQuery" class="btn btn-gradient">
                 Submit a Query
               </button>
             </div>
-
-            <!-- Success box with Reference ID -->
-            <div
-              id="successBox"
-              class="alert alert-success mt-4"
-              style="display:none;"
-            >
-              Your request has been submitted. Reference ID:
-              <span id="refCode" class="ref-code">QRMS-XXXXXXXX</span>
-            </div>
           </div>
+
+          <!-- ================= THANK YOU SECTION ================= -->
+          <div id="thankYouSection" class="text-center d-none mt-4">
+            <div class="success-icon">
+              <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                <path d="M7 13l3 3 7-7" stroke-linecap="round" stroke-linejoin="round"/>
+              </path>
+            </svg>
+            </div>
+            <h4 class="mb-2">Thank you!</h4>
+            <p class="text-muted mb-3">Your request has been submitted to HR.</p>
+            <div class="mb-1">Reference ID:</div>
+            <div id="thankRef" class="ref-code">HR-XXXX</div>
+            <p class="text-muted mt-3">Please keep this Reference ID for future communication.</p>
+          </div>
+
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Hidden iframe for CORS-safe POST -->
-  <iframe name="hidden_iframe" style="display:none;"></iframe>
-
-  <!-- Callback phone modal -->
-  <div class="modal fade" id="callbackModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Request a Callback</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <label for="callbackPhone" class="form-label">Phone Number</label>
-          <input
-            type="tel"
-            id="callbackPhone"
-            class="form-control"
-            placeholder="10-digit mobile number"
-          />
-          <small class="text-muted">
-            HR will use this number to call you back.
-          </small>
-          <div
-            id="callbackPhoneError"
-            class="text-danger mt-2"
-            style="display:none;font-size:0.85rem;"
-          ></div>
-        </div>
-        <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-outline-secondary"
-            data-bs-dismiss="modal"
-          >
-            Cancel
-          </button>
-          <button type="button" class="btn btn-gradient" id="confirmCallbackBtn">
-            Confirm Request
-          </button>
-        </div>
+<!-- CALLBACK MODAL -->
+<div class="modal fade" id="callbackModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      
+      <div class="modal-header">
+        <h5 class="modal-title">Request a Callback</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
       </div>
+
+      <div class="modal-body">
+        <label class="form-label">Phone Number</label>
+        <input id="callbackPhone" class="form-control" placeholder="10-digit mobile number">
+        <div id="callbackError" class="text-danger small mt-2 d-none"></div>
+      </div>
+
+      <div class="modal-footer">
+        <button class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button id="btnConfirmCallback" class="btn btn-gradient">Confirm Request</button>
+      </div>
+
     </div>
   </div>
+</div>
 
-  <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- App logic -->
-  <script src="qrms.js"></script>
+<!-- JS Logic -->
+<script src="qrms.js"></script>
+
 </body>
 </html>
