--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
               <!-- Dates section (mandatory) -->
               <div class="mb-3">
-                <label class="form-label">Relevant Date(s) <span class="text-danger">*</span></label>
+                <label class="form-label">Query Date(s) <span class="text-danger">*</span></label>
                 <div class="d-flex flex-wrap align-items-center">
                   <input
                     type="date"
